<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:textview="http://schemas.android.com/apk/res-auto"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@drawable/diloag_background">

    <LinearLayout
        android:id="@+id/dialog_content_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="24dp">

        <TextView
            android:id="@+id/dialog_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network_availability_title"
            android:textColor="#E6000000"
            android:textSize="20sp"
             />

        <TextView
            android:id="@+id/dialog_message_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:lineSpacingExtra="4dp"
            android:text="@string/network_availability_description"
            android:textColor="#8C000000"
            android:textSize="16sp"
             />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_button_layout"
        android:layout_width="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/dialog_content_layout"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/dialog_button_selector"
            android:minWidth="64dp"
            android:text="@string/cancel"
            android:textColor="#FF0063ae"
            android:textSize="14sp" />

        <Button
            android:id="@+id/dialog_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/dialog_button_selector"
            android:minWidth="64dp"
            android:text="@string/button_ok"
            android:textColor="#FF0063ae"
            android:textSize="14sp" />

    </LinearLayout>


</RelativeLayout>