<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:textview="http://schemas.android.com/apk/res-auto"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
            android:background="@color/cardview_light_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".AppDetailFragment" >
        <com.capstone.offerbank.MyViewFlipper
            android:layout_width="fill_parent"
            android:layout_height="146dip"
            android:id="@+id/viewFlipper"
            android:background="@color/colorPrimary"
            >
        </com.capstone.offerbank.MyViewFlipper>

    <ScrollView
        android:id="@+id/contentContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".AppDetailFragment" >

        <LinearLayout
            android:id="@+id/btn_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dip"
            android:layout_marginRight="16dip"
            android:layout_gravity="right"
            android:gravity="right"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                style="@style/InstallButtonStyle"
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uninstall_caps"
                android:textSize="14sp"
                android:includeFontPadding="true"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                />


            <Button
                style="@style/InstallButtonStyle"
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/install_caps"
                android:textSize="14sp"
                android:includeFontPadding="true"
                android:layout_marginLeft="8dip"
                android:layout_weight="1"/>

            <Button
                style="@style/InstallButtonStyle"
                android:id="@+id/btn3"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_caps"
                android:includeFontPadding="true"
                android:layout_marginLeft="8dip"
                android:textSize="14sp"
                android:layout_weight="1"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <com.capstone.offerbank.NetworkImageView
                    android:id="@+id/iconsmall"
                    android:layout_width="45.33dp"
                    android:layout_height="45.33dp"
                    android:scaleType="fitXY" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#2b2b2b"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/author"
                        android:layout_marginTop="10dp"
                        android:textSize="14sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#aeaeae" />

                    <TextView
                        android:id="@+id/versionName"
                        android:layout_width="match_parent"
                        android:layout_marginTop="8dp"
                        android:textSize="14sp"
                        android:layout_height="wrap_content"
                        android:textColor="#aeaeae" />
                </LinearLayout>
            </LinearLayout>

           <LinearLayout
                android:id="@+id/progressContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/jw_loading_apps_msg"
                    android:textColor="#2b2b2b" />

                <ProgressBar
                    android:id="@+id/progressbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="100"/>

                <Button
                    android:id="@+id/cancel_download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_download"
                    android:textColor="@android:color/primary_text_dark"
                    android:visibility="visible"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
             >

            <TextView
                android:id="@+id/description"
                android:textSize="14sp"
                android:textColor="#7f7f7f"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false" />
            <HorizontalScrollView
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="122dp" >

                <LinearLayout
                    android:id="@+id/screen_container"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
      </LinearLayout>
    </ScrollView>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/progressLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:singleLine="true"
            android:text="@string/jw_loading_apps_msg"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/back_arrow"
        android:contentDescription="@string/detail_screen_back_arrow"
        android:layout_gravity="top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/commonlib_action_back_drawable"
        />
</FrameLayout>